Updated Plugin & dependencies to Minecraft 1.21.11
By request removed all whitelist features and modified default config to reflect that. Previous configs will need that section removed or delete it to generate a new one.

Fixed some errors Intellj was yelling at me about and completed any ToDo tasks I found.

Added Log utility for colored console output (and because I hate the way calling it per class looks. So messy)

Fixed Hud showing incorrect coords.

Fixed some grammar and spelling mistakes in comments and documentation.